--- a/css/embla-base.css
+++ b/css/embla-base.css
@@ -26,6 +26,8 @@ body {
   padding: 0;
 }
 .theme-light {
+  --header-bg: #eee;
+  --nav-link-color: #0f172a;
   --brand-primary: rgb(47, 112, 193);
   --brand-secondary: rgb(116, 97, 195);
   --brand-alternative: rgb(19, 120, 134);
@@ -61,6 +63,8 @@ body {
   --admonition-danger-rgb-value: 220, 38, 38;
 }
 .theme-dark {
+  --header-bg: #075985;
+  --nav-link-color: #fef3c7;
   --brand-primary: rgb(138, 180, 248);
   --brand-secondary: rgb(193, 168, 226);
   --brand-alternative: rgb(136, 186, 191);
