--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,7 @@
 
 /* HEADER */
 header {
-    /* background-color: var(--detail-low-contrast); */
-    background-color: rgb(240, 240, 242);
+    background-color: var(--header-bg);
     color: white;
     text-align: center;
     padding: 1rem 0;
@@ -37,15 +36,12 @@ nav {
     justify-content: center;
     gap: 2rem;
     font-weight: 500;
-    /* background-color: #34495E; */
-    /* position: sticky;
-    top: 0; */
     z-index: 1000;
 }
 nav a {
-    /* color: white; */
     text-decoration: none;
     padding: 0.75rem 1rem;
+    color: var(--nav-link-color);
 }
 nav a:hover {
     color: var(--brand-alternative);
@@ -109,20 +105,6 @@ nav a:hover {
 .button:hover {
     background-color: #1ABC9C;
 }
-
-/* BOOKING & YOUTUBE SECTION */
-.booking-yt {
-    min-height: 44rem;
-    display: flex;
-    gap: 2rem;
-    justify-content: center;
-    align-items: center;
-    justify-items: stretch;
-    flex-wrap: wrap;
-    padding-top: 14rem;
-    padding-bottom: 14rem;
-}
-
 
 /* FOOTER */
 footer {
